# turboquant-java-runtime

./: .gitignore  LICENSE  README.md  ROADMAP.md  pom.xml
benchmarks/results/: llamacpp_baselines.csv  qwen05b_q4_0_ctx2048_gen32.json  qwen05b_q4_0_ctx2048_gen64.json  qwen05b_q4_0_ctx2048_gen64_repeat.json
docs/: architecture.md  benchmarking.md  llamacpp-demo.md  llamacpp-smoke-test.md  rocm-porting-plan.md
docs/benchmarks/: summary.md
include/: tq_native_api.h
native/cuda/: CMakeLists.txt  tq_jni_bridge.c  tq_native_mock.c
native/hip/: CMakeLists.txt  tq_jni_bridge.c  tq_native_mock.c
scripts/: plot_benchmarks.py
tq-backend-cpu-stub/: pom.xml
tq-backend-cpu-stub/src/main/java/com/turboquant/backend/cpu/: CpuBackend.java  CpuBackendProvider.java  CpuComputeSession.java  CpuTensorHandle.java
tq-backend-cpu-stub/src/test/java/com/turboquant/backend/cpu/: CpuBackendTest.java  CpuSessionLifecycleTest.java
tq-backend-cuda/: pom.xml
tq-backend-cuda/src/main/java/com/turboquant/backend/cuda/: CudaBackend.java  CudaBackendProvider.java  CudaComputeSession.java  CudaNativeBridge.java  CudaTensorHandle.java
tq-backend-hip/: pom.xml
tq-backend-hip/src/main/java/com/turboquant/backend/hip/: HipBackend.java  HipBackendProvider.java  HipComputeSession.java  HipNativeBridge.java  HipTensorHandle.java
tq-backend-llamacpp/: pom.xml
tq-backend-llamacpp/src/main/java/com/turboquant/backend/llamacpp/: GpuOffloadDetector.java  LlamaCppBackend.java  LlamaCppBackendProvider.java  LlamaCppSession.java
tq-backend-llamacpp/src/test/java/com/turboquant/backend/llamacpp/: LlamaCppSmokeTest.java
tq-bench-cli/: dependency-reduced-pom.xml  pom.xml
tq-bench-cli/src/main/java/com/turboquant/bench/: BenchCli.java  BenchmarkExporter.java  BenchmarkMetrics.java  BenchmarkRunResult.java
tq-bench-cli/src/test/java/com/turboquant/bench/: BenchmarkExportTest.java
tq-runtime-api/: pom.xml
tq-runtime-api/src/main/java/com/turboquant/runtime/api/: Backend.java  BackendCapability.java  BackendConfig.java  BackendException.java  ComputeSession.java  DType.java  InferenceRequest.java  InferenceResult.java  KvCacheStats.java  SessionConfig.java  TensorHandle.java  TurboQuantRuntime.java
tq-runtime-core/: pom.xml
tq-runtime-core/src/main/java/com/turboquant/runtime/core/: BackendRegistry.java  DefaultTurboQuantRuntime.java  RuntimeEngine.java
tq-runtime-core/src/test/java/com/turboquant/runtime/core/: BackendRegistryTest.java  DefaultTurboQuantRuntimeTest.java
tq-runtime-spi/: pom.xml
tq-runtime-spi/src/main/java/com/turboquant/runtime/spi/: BackendProvider.java
tq-spring-boot-starter/: pom.xml
tq-spring-boot-starter/src/main/java/com/turboquant/spring/: TurboQuantAutoConfiguration.java  TurboQuantProperties.java
